--- a/pages/shop-cart/index.wxss
+++ b/pages/shop-cart/index.wxss
@@ -2,10 +2,11 @@
 @import "../template-cart/template-cart.wxss";
 page{
   min-height: 100%;
-  background-color: #F2f2f2;
+  background-color: #f8f8f8;
+  font-family: PingFang SC Medium, sans-serif;
 }
 .container {
-  background-color: #F2f2f2;
+  background-color: #f8f8f8;
   min-height: 100%;
 }
 .pos-fiexd{
