--- a/pages/template-cart/template-cart.wxml
+++ b/pages/template-cart/template-cart.wxml
@@ -1,7 +1,7 @@
 <template name="no-goods">
-    <view class="title-box">
-        购物车空空如也～
-    </view>
+   <view class="short-card-no-content">
+       <image src="/images/no-short-card.png"></image>
+   </view>
     <view class="to-index-btn" bindtap="toIndexPage">
             去逛逛
     </view>
@@ -9,20 +9,24 @@
 
 <template name="cart-goods-list">
     <view class="list-top">
-        <view class="label">洁雅康餐具</view>
+        <!--<view class="label">洁雅康餐具</view>-->
         <view class="edit-btn" hidden="{{!saveHidden}}" bindtap="editTap">编辑</view>
         <view class="edit-btn" hidden="{{saveHidden}}" bindtap="saveTap">完成</view>
     </view>
     <view class="goodsList">
         <view class="a-gooods" wx:for="{{list}}"  wx:key="{{index}}" >
             <view class="a-goods-conts {{item.active? 'active':''}}" bindtap="selectTap" bindtouchstart="touchS" bindtouchmove="touchM" bindtouchend="touchE" data-index="{{index}}"    style="{{item.left}}">
+                <view class="check">
+                    <image class="address-check-icon" src="/images/addr-active.png" wx:if="{{item.active}}"></image>
+                    <image class="address-check-icon" src="/images/addr-uncheck.png" wx:if="{{!item.active}}"></image>
+                </view>
                 <view class="goods-info">
                     <view class="img-box">
                         <image src="{{item.pic}}" class="img"/>
                     </view>
                     <view class="text-box">
                         <view class="goods-title">{{item.name}}</view>
-                        <view class="goods-label">{{item.label}}</view>
+                        <!--<view class="goods-label">{{item.label}}</view>-->
                         <view class="goods-price">¥ {{item.price}}</view>
                         <view class="buy-num">
                             <view class="jian-btn {{item.number==1? 'disabled' : ''}}" catchtap="jianBtnTap" data-index="{{index}}">-</view>
@@ -31,16 +35,22 @@
                         </view>
                     </view>
                 </view>
-                <view class="delete-btn" data-index="{{index}}" catchtap="delItem">
-                  删除
-                </view>
+                <!--<view class="delete-btn" data-index="{{index}}" catchtap="delItem">删除</view>-->
             </view>
         </view>
     </view>
     <view class="jiesuan-box">
         <view class="left-price">
-            <view class="all-selected  {{allSelect?'active':''}}" bindtap="bindAllSelect">全选</view>
-            <view class="total" hidden="{{noSelect}}">合计：¥ {{totalPrice}}</view>
+            <view class="check all-selected" bindtap="bindAllSelect">
+                <image class="address-check-icon" src="/images/addr-active.png" wx:if="{{allSelect}}"></image>
+                <image class="address-check-icon" src="/images/addr-uncheck.png" wx:if="{{!allSelect}}"></image>
+                <view class="check-label">全选</view>
+            </view>
+            <view class="total" hidden="{{noSelect}}">
+                <view class="total-label">合计：</view>
+                <view class="total-unit">¥</view>
+                <view class="total-price">{{totalPrice}}</view>
+            </view>
         </view>
         <view class="to-pay-btn {{noSelect?'no-select':''}}" hidden="{{!saveHidden}}" bindtap="toPayOrder">去结算</view>
         <view class="to-pay-btn {{noSelect?'no-select':''}}" hidden="{{saveHidden}}" bindtap="deleteSelected">删除</view>
