--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -65,7 +65,12 @@
         <view class="goods-detail">
           <view class="goods-title">{{item.name}}</view>
           <view class="goods-wrap">
-            <view class="goods-price">¥ {{item.minPrice}}</view>
+            <view class="goods-price">
+              <view class="price-label">¥  </view>
+              <view class="price-value">{{item.minPrice}}</view>
+              <view class="price-unit"> /套</view>
+                <!--todo 不同单位，可能出现  /件  18套/件-->
+            </view>
             <view class="goods-select">选规格</view>
           </view>
         </view>
