--- a/pages/tableware/index.wxss
+++ b/pages/tableware/index.wxss
@@ -23,52 +23,68 @@
   padding: 0 30rpx;
 }
 .goods-box .img-box{
-  width: 260rpx;
-  height: 180rpx;
+  width: 164rpx;
+  height: 164rpx;
   border: 2rpx solid #f0f0f0;
   border-radius: 10rpx;
   overflow: hidden;
   box-sizing: content-box;
 }
 .goods-box .img-box image{
-   width: 260rpx;
-   height: 180rpx;
+   width: 164rpx;
+   height: 164rpx;
 }
 .goods-box .goods-detail{
-  flex: 1;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  justify-content: space-between;
+  height: 164rpx;
 }
 .goods-box .goods-title, .goods-box .goods-price{
   overflow: hidden;
   font-size: 30rpx;
-  margin-left: 48rpx;
+  margin-left: 30rpx;
 }
 .goods-wrap{
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding-bottom: 20rpx;
 }
 .goods-box .goods-title{
   font-family: PingFang SC Medium, sans-serif;
   text-overflow: ellipsis;
   white-space: nowrap;
-  padding: 50rpx 0 0 0;
+  padding-top: 20rpx;
   color:#000;
-  margin-bottom: 48rpx;
 }
 .goods-box .goods-price{
-  font-family: Mark Pro Regular, sans-serif;
-  padding: 24rpx 0;
-  color:#ea5255;
+  font-family: DINAlternate Bold, sans-serif;
+  display: flex;
+  align-items: center;
+  color:#ff001c;
+}
+.price-label{
+  font-size: 30rpx;
+  padding-right: 10rpx;
+}
+.price-value{
+  font-size: 34rpx;
+}
+.price-unit{
+  font-size: 26rpx;
+  padding-left: 10rpx;
 }
 .goods-select{
   font-family: PingFang SC Medium, sans-serif;
   width: 126rpx;
   height: 54rpx;
   line-height: 54rpx;
-  border: 3.5rpx solid #ea5255;
-  border-radius: 14rpx;
+  background-color: #ff001c;
+  border-radius: 8rpx;
   text-align: center;
   vertical-align: middle;
-  color: #ea5255;
+  color: #fff;
   font-size: 28rpx;
 }
