--- a/pages/order-my/index.wxml
+++ b/pages/order-my/index.wxml
@@ -6,13 +6,13 @@
       <view class="{{tabClass[index]}}"></view>
     </view>
   </view>
-  <view class="no-order" hidden="{{orderList ? true : false}}">
+  <view class="no-order" hidden="{{orderList.length !== 0}}">
     <image src="/images/no-order.png" class="no-order-img"></image>
-    <view class="text" wx:if="{{currentType === '0'}}">暂无订单，去别处看看吧。</view>
-    <view class="text" wx:if="{{currentType !== '0'}}">暂无{{statusType[currentType]}}订单，切换全部看看吧～</view>
+    <view class="text" wx:if="{{currentType === 0}}">暂无订单，去别处看看吧。</view>
+    <view class="text" wx:if="{{currentType !== 0}}">暂无{{statusType[currentType]}}订单，切换全部看看吧～</view>
     <view bindtap="goBack" class="no-order-back">返回</view>
   </view>
-  <view class="order-list" hidden="{{orderList ? false : true}}">
+  <view class="order-list" hidden="{{orderList.length === 0}}">
     <view class="a-order" wx:for-items="{{orderList}}" wx:key="{{index}}">
       <view class="order-date">
         <view class="date-box">下单时间：{{item.dateAdd}}</view>
@@ -33,7 +33,7 @@
       </view>
       <view class="price-box">
         <view class="total-price" wx:if="{{item.score <= 0}}">合计：¥ {{item.amountReal}}</view>
-        <view class="total-price" wx:if="{{item.score > 0}}">合计：¥ {{item.amountReal}} + {{item.score}} 积分</view>
+        <!--<view class="total-price" wx:if="{{item.score > 0}}">合计：¥ {{item.amountReal}} + {{item.score}} 积分</view>-->
         <view class="btn cancel-btn" hidden="{{item.status==0? false : true}}" bindtap="cancelOrderTap"
               data-id="{{item.id}}">取消订单
         </view>
