--- a/pages/order-my/index.wxml
+++ b/pages/order-my/index.wxml
@@ -3,7 +3,7 @@
     <view bindtap="statusTap" class="status-label {{index == currentType ? 'active' : ''}}"
           wx:for-items="{{statusType}}" wx:key="{{index}}" data-index="{{index}}">
       {{item}}
-      <view class="{{tabClass[index]}}"></view>
+      <view class="{{tabClass[index]>0?'red-dot': ''}}"></view>
     </view>
   </view>
   <view class="no-order" hidden="{{orderList.length !== 0}}">
