--- a/pages/order-my/index.wxss
+++ b/pages/order-my/index.wxss
@@ -1,9 +1,11 @@
 .container{
     width: 100%;
+    height: 100vh;
     background-color: #F2f2f2;
 }
 .status-box{
-    width:100%;
+    width: 690rpx;
+    padding: 0 30rpx;
     height: 88rpx;
     line-height: 88rpx;
     display: flex;
@@ -12,13 +14,17 @@
     background-color: #fff;
 }
 .status-box .status-label{
-    width: 150rpx;
+    font-family: PingFang SC Bold, sans-serif;
+    font-size: 30rpx;
+    color:#666;
+    width: 140rpx;
     height: 100%;
     text-align: center;
-    font-size:28rpx;
-    color:#353535;
     box-sizing: border-box;
     position: relative;
+}
+.status-box .status-label:not(:last-child){
+    margin-right: 10rpx;
 }
 .status-box .status-label.active{
     color:#ff001c;
@@ -30,7 +36,7 @@
     position: absolute;
     left: 116rpx;
     top:23rpx;
-    background-color: #f43530;
+    background-color: #ff001c;
     border-radius: 50%;
 }
 .no-order{
@@ -67,23 +73,29 @@
   margin-top: 40rpx;
 }
 .order-list{
-    width: 100%;
+    width: 690rpx;
 }
 .order-list .a-order{
+    font-family: PingFang SC Medium, sans-serif;
+    font-size: 26rpx;
     width: 100%;
     background-color: #fff;
-    margin-top: 20rpx;
+    margin-top: 30rpx;
+    border-radius: 12rpx;
 }
-.order-list .a-order .order-date{
-    padding: 0 30rpx;
-    height: 88rpx;
+.order-list .a-order .order-number{
+    padding: 30rpx;
     display: flex;
     justify-content: space-between;
-    font-size:26rpx;
-    color:#000000;
     align-items: center;
 }
-.order-list .a-order .order-date .red{
+.order-list .a-order .order-number .order-number-label{
+    color: #999;
+}
+.order-list .a-order .order-number .order-status{
+    color: #ff001c;
+}
+.order-list .a-order .order-number .red{
     font-size:26rpx;
     color:#ff001c;
 }
@@ -91,8 +103,6 @@
 .goods-img-container{
     width: 720rpx;
     margin-left: 30rpx;
-    border-top: 1rpx solid #eee;
-    border-bottom: 1rpx solid #eee;
     padding: 30rpx 0;
     display: flex;
     align-items: center;
