--- a/pages/order-my/index.wxss
+++ b/pages/order-my/index.wxss
@@ -1,6 +1,6 @@
 .container{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background-color: #F2f2f2;
 }
 .status-box{
@@ -99,77 +99,98 @@
     font-size:26rpx;
     color:#ff001c;
 }
-.a-order  .goods-info,
-.goods-img-container{
-    width: 720rpx;
-    margin-left: 30rpx;
-    padding: 30rpx 0;
+.a-order  .goods-info{
+    padding: 0 30rpx;
     display: flex;
     align-items: center;
+    flex-direction: column;
 }
-.goods-info .img-box{
-    width: 120rpx;
-    height: 120rpx;
+.goods-info .goods-box{
+    width: 100%;
+    height: 164rpx;
+    display: flex;
     overflow: hidden;
-    margin-right: 30rpx;
-    background-color: #f7f7f7;
+    margin-bottom: 20rpx;
 }
-.goods-info .img-box .goods-img,
-.goods-img-container .img-box .goods-img{
-    width: 120rpx;
-    height: 120rpx;
+.goods-info .goods-box .goods-img{
+    width: 164rpx;
+    height: 164rpx;
 }
-.goods-info  .goods-des{
-    width: 540rpx;
-    height: 78rpx;
-    line-height: 39rpx;
-    font-size:26rpx;
-    color:#000000;
-    overflow: hidden;
+.goods-box .goods-right{
+    padding-left: 30rpx;
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
 }
-.goods-img-container{
-    height: 180rpx;
-    box-sizing: border-box;
-    white-space: nowrap;
+.goods-right .goods-right-header{
+    display: flex;
+    justify-content: space-between;
 }
-.goods-img-container .img-box{
-    width: 120rpx;
-    height: 120rpx;
-    overflow: hidden;
-    margin-right: 20rpx;
-    background-color: #f7f7f7;
-    display: inline-block;
+.goods-right .goods-right-header .goods-name{
+    color: #000;
+}
+.goods-right .goods-right-header .goods-price{
+    font-family: DINAlternate Bold, sans-serif;
+    color: #ff001c;
+    font-size: 34rpx;
+}
+.goods-right .goods-number{
+    color: #888;
+    font-size: 28rpx;
+    display: flex;
+    line-height: 40rpx;
+    justify-content: flex-end;
+}
+.goods-right .goods-number .goods-number-left{
+    font-size: 20rpx;
 }
 .order-list .a-order .price-box{
     position: relative;
-    width: 720rpx;
-    height: 100rpx;
-    margin-left: 30rpx;
-    box-sizing: border-box;
-    padding: 20rpx 30rpx 20rpx 0;
+    padding: 20rpx 30rpx;
     display: flex;
-    align-items: center;
+    flex-direction: column;
     justify-content: space-between;
-    font-size:26rpx;
 }
 .order-list .a-order .price-box .total-price{
-    font-size:26rpx;
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 30rpx;
+}
+.total-price .total-number{
     color:#ff001c;
+    padding: 0 15rpx;
+}
+.white-space{
+    width: 30rpx;
+}
+.total-price .price{
+    font-family: Myriad Pro, sans-serif;
+    display: flex;
+    line-height: 40rpx;
+    color:#ff001c;
+    font-size: 34rpx;
+}
+.total-price .price .price-unit{
+    color: #ff001c;
+    font-size: 26rpx;
+    margin-right: 5rpx;
+}
+.price-box .order-action{
+    display: flex;
+    justify-content: flex-end;
 }
 .a-order .price-box .btn{
-    width: 166rpx;
-    height: 60rpx;
+    width: 148rpx;
+    height: 51rpx;
     box-sizing: border-box;
     text-align: center;
-    line-height: 60rpx;
-    border-radius: 6rpx;
-    margin-left: 20rpx;
+    line-height: 51rpx;
+    border-radius: 25.5rpx;
+    margin-left: 30rpx;
 }
 .a-order .price-box .cancel-btn{
-    border: 1rpx solid #ccc;
-    position: absolute;
-    right: 216rpx;
-    top:20rpx;
+    color: #000;
+    border: 1rpx solid #000;
 }
 .a-order .price-box .topay-btn{
     border:1px solid #ff001c;
