--- a/pages/order-my/index.wxml
+++ b/pages/order-my/index.wxml
@@ -15,7 +15,7 @@
   <view class="order-list" hidden="{{orderList.length === 0}}">
     <view class="a-order" wx:for-items="{{orderList}}" wx:key="{{index}}">
       <view class="order-number">
-        <view class="order-number-label">订单号:{{item.orderNumber}}</view>
+        <view class="order-number-label">订单号：{{item.orderNumber}}</view>
         <view class="order-status {{(item.status==-1 || item.status==4) ? '':'red'}}">{{item.statusStr}}</view>
       </view>
       <view class="goods-info" bindtap="orderDetail" data-id="{{item.id}}">
