--- a/pages/order-details/index.wxml
+++ b/pages/order-details/index.wxml
@@ -1,18 +1,18 @@
 <view class="container">
     <view class="sec-wrap">
         <view class="order-status">
-            <view class="icon-box">
-                <image wx:if="{{orderDetail.orderInfo.status==-1}}" class="icon" src="/images/order-details/icon-ddgb.png"></image>
-                <image wx:elif="{{orderDetail.orderInfo.status==0}}" class="icon" src="/images/order-details/icon-ddfk.png"></image>
-                <image wx:elif="{{orderDetail.orderInfo.status==1}}" class="icon" src="/images/order-details/icon-ddfh.png"></image>
-                <image wx:elif="{{orderDetail.orderInfo.status==2}}" class="icon" src="/images/order-details/icon-ddsh.png"></image>
-                <image wx:elif="{{orderDetail.orderInfo.status==3 || orderDetail.orderInfo.status==4}}" class="icon" src="/images/order-details/icon-jycg.png"></image>
-            </view>
             <view class="right-text">
                 <view class="status red">{{orderDetail.orderInfo.statusStr}}</view>
-                <view class="des" hidden="true">请于11时59分59秒内付款，超时订单将自动关闭</view>
+                <view class="des" hidden="true">请于14分59秒内付款，超时订单将自动关闭</view>
             </view>
         </view>
+      <!--<view class="icon-box" wx:if="false">-->
+        <!--<image wx:if="{{orderDetail.orderInfo.status==-1}}" class="icon" src="/images/order-details/icon-ddgb.png"></image>-->
+        <!--<image wx:elif="{{orderDetail.orderInfo.status==0}}" class="icon" src="/images/order-details/icon-ddfk.png"></image>-->
+        <!--<image wx:elif="{{orderDetail.orderInfo.status==1}}" class="icon" src="/images/order-details/icon-ddfh.png"></image>-->
+        <!--<image wx:elif="{{orderDetail.orderInfo.status==2}}" class="icon" src="/images/order-details/icon-ddsh.png"></image>-->
+        <!--<image wx:elif="{{orderDetail.orderInfo.status==3 || orderDetail.orderInfo.status==4}}" class="icon" src="/images/order-details/icon-jycg.png"></image>-->
+      <!--</view>-->
         <block wx:if="{{orderDetail.logistics}}">
           <view wx:if="{{orderDetail.logisticsTraces}}" class="wuliu-box">
               <view class="icon-box">
@@ -71,7 +71,7 @@
                 </view>
             </view>
             <view class="btn-row" wx:if="{{orderDetail.orderInfo.status==3}}">
-                
+
                   <view class="section section_gap">
                     <view style="margin-top:35rpx;margin-bottom:35rpx;">评价：</view>
                     <radio-group name="goodReputation{{index}}">
@@ -87,7 +87,7 @@
                   </view>
             </view>
             </block>
-            <view class="btn-row" wx:if="{{orderDetail.orderInfo.status==3}}">                
+            <view class="btn-row" wx:if="{{orderDetail.orderInfo.status==3}}">
                 <navigator style="float:right;" class="confirm-btn" target="miniProgram" app-id="wx56c8f077de74b07c" path="/open/order-comment/order-comment?appid={{appid}}&order_id={{orderDetail.orderInfo.orderNumber}}">去购物单评价</navigator>
                 <button style="float:right;" class="confirm-btn" formType="submit">提交评价</button>
             </view>
