--- a/pages/template-cart/template-cart.wxml
+++ b/pages/template-cart/template-cart.wxml
@@ -1,6 +1,6 @@
 <template name="no-goods">
-   <view class="short-card-no-content">
-       <image src="/images/no-short-card.png"></image>
+   <view class="shop-cart-no-content">
+       <image src="/images/no-shop-card.png"></image>
        <view class="no-content-label">购物车空空如也～</view>
    </view>
     <view class="to-index-btn" bindtap="toIndexPage">
