--- a/pages/template-cart/template-cart.wxss
+++ b/pages/template-cart/template-cart.wxss
@@ -1,7 +1,7 @@
 page {
   /*height: 100%;*/
 }
-.short-card-no-content{
+.shop-cart-no-content{
   margin: auto;
   margin-top: 280rpx;
 }
@@ -13,7 +13,7 @@ page {
   margin-bottom: 42rpx;
   text-align: center;
 }
-.short-card-no-content image{
+.shop-cart-no-content image{
   width: 261rpx;
   height: 165rpx;
 }
