无地址信息时占位图

--- a/pages/select-address/index.wxml
+++ b/pages/select-address/index.wxml
@@ -1,32 +1,37 @@
 <view class="container">
-    <view class="address-list">
-        <view class="address-item" wx:for-items="{{addressList}}"
-              wx:key="{{index}}" bindtap="selectTap" data-id="{{item.id}}">
-            <view class="name-tel">
-                <view class="name">
-                    {{item.linkMan}}
-                </view>
-                <view class="phone">
-                    {{item.mobile}}
-                </view>
-            </view>
-            <view class="address">
-                {{item.address}}
-            </view>
-            <view class="address-action">
-                <view class="address-default">
-                    <image class="address-check-icon" src="/images/check.png" wx:if="{{item.isDefault}}"></image>
-                    <image class="address-check-icon" src="/images/unchecked.png" wx:if="{{!item.isDefault}}"></image>
-                    <view class="address-default-text">默认地址</view>
-                </view>
-                <view class="address-edit" catchtap="editAddress" data-id="{{item.id}}">
-                    <image src="/images/addr-edit.png" class="address-edit-icon"></image>
-                    <view class="address-edit-text">编辑</view>
-                </view>
-            </view>
+  <view class="address-list" wx:if="{{addressList.length>0}}">
+    <view class="address-item" wx:for-items="{{addressList}}"
+          wx:key="{{index}}" bindtap="selectTap" data-id="{{item.id}}">
+      <view class="name-tel">
+        <view class="name">
+          {{item.linkMan}}
         </view>
+        <view class="phone">
+          {{item.mobile}}
+        </view>
+      </view>
+      <view class="address">
+        {{item.address}}
+      </view>
+      <view class="address-action">
+        <view class="address-default">
+          <image class="address-check-icon" src="/images/check.png" wx:if="{{item.isDefault}}"></image>
+          <image class="address-check-icon" src="/images/unchecked.png" wx:if="{{!item.isDefault}}"></image>
+          <view class="address-default-text">默认地址</view>
+        </view>
+        <view class="address-edit" catchtap="editAddress" data-id="{{item.id}}">
+          <image src="/images/addr-edit.png" class="address-edit-icon"></image>
+          <view class="address-edit-text">编辑</view>
+        </view>
+      </view>
     </view>
-    <view class="bottom-box">
-        <view class="add-address" bindtap="addAddress">添加新地址</view>
-    </view>
+  </view>
+  <view class="no-address" wx:if="{{addressList.length===0}}">
+    <image src="/images/no-address.png"></image>
+    <!-- todo 占位图要改!-->
+    <view class="no-content-label">暂无绑定地址信息</view>
+  </view>
+  <view class="bottom-box">
+    <view class="add-address" bindtap="addAddress">添加新地址</view>
+  </view>
 </view>
