删除多余，完成首页界面

--- a/app.wxss
+++ b/app.wxss
@@ -1,11 +1,13 @@
 @import 'weui/weui.wxss';
 
 .container {
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   box-sizing: border-box;
+  font-family: PingFang SC, serif;
+  background-color: #fff;
+  min-height: 100%;
 }
 .wxParse-img {
   display: block !important;
