--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,75 +1,21 @@
-<!--index.wxml-->
-<!--1px = 750/320 = 2.34rpx;-->
 <view class="container">
-  <!--<view class="swiper-container">-->
-    <!--<swiper class="swiper_box"-->
-            <!--autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" bindchange="swiperchange">-->
-      <!--<block wx:for="{{banners}}" wx:key="id">-->
-        <!--<swiper-item>-->
-          <!--<image bindtap="tapBanner" data-id="{{item.businessId}}" src="{{item.picUrl}}_m" class="slide-image"-->
-                 <!--width="750rpx" height="562.5rpx"/>-->
-        <!--</swiper-item>-->
-      <!--</block>-->
-    <!--</swiper>-->
-    <!--<view class="dots">-->
-      <!--<block wx:for="{{banners}}" wx:key="unique">-->
-        <!--<view class="dot{{index == swiperCurrent ? ' active' : ''}}"></view>-->
-      <!--</block>-->
-    <!--</view>-->
-  <!--</view>-->
-  <view class="swiper-container">
-    <image bindtap="tapBanner" src="https://cdn.it120.cc/apifactory/2019/03/05/e6682c63219270bcc80745750de25bbb.png" class="slide-image"/>
+  <view class="banner">
+    <image bindtap="tapBanner" src="/images/banner/banner.png" class="slide-image"/>
   </view>
-  <!--<view class="type-container">-->
-    <!--<scroll-view class="type-navbar" scroll-x="true">-->
-      <!--<view class="type-box" wx:for-items="{{categories}}" wx:key="id">-->
-        <!--<view id="{{item.id}}" class="type-navbar-item {{activeCategoryId == item.id ? 'type-item-on' : ''}}"-->
-              <!--bindtap="tabClick">-->
-          <!--{{item.name}}-->
-        <!--</view>-->
-      <!--</view>-->
-    <!--</scroll-view>-->
-  <!--</view>-->
-  <view wx:if="{{noticeList}}" class="notice">
-    <view class="notice_iteml">公告：</view>
-    <swiper wx:if="{{noticeList}}" class="notice_swiper" vertical="true" autoplay="true" circular="true"
-            interval="3000">
-      <navigator wx:for-items="{{noticeList.dataList}}" wx:key="id" url="/pages/notice/show?id={{item.id}}"
-                 open-type="navigate">
-        <swiper-item>
-          <view class="notice_itemr">{{item.title}}</view>
-        </swiper-item>
-      </navigator>
-    </swiper>
-  </view>
-  <!--<view class="coupons" hidden="{{hasNoCoupons}}">-->
-    <!--<scroll-view class="coupons-scroll" scroll-x="true">-->
-      <!--<view class="coupons-item" wx:for-items="{{coupons}}" wx:for-index="idx" wx:key="id" bindtap="gitCoupon"-->
-            <!--data-id="{{item.id}}" data-pwd="{{item.pwd}}">-->
-        <!--<view style="font-size: 35rpx" wx:if="{{item.moneyMin == item.moneyMax}}"> ￥ {{item.moneyMax}}</view>-->
-        <!--<view style="font-size: 35rpx" wx:else> ￥ {{item.moneyMin}} - {{item.moneyMax}}</view>-->
-        <!--<view> {{item.name}}</view>-->
-        <!--<view> 满 {{item.moneyHreshold}} 元使用</view>-->
-        <!--<view wx:if="{{item.dateEndType == 0}}"> {{item.dateEnd}} 前有效</view>-->
-        <!--<view wx:if="{{item.dateEndType == 1}}"> 领取 {{item.dateEndDays}} 天内有效</view>-->
-      <!--</view>-->
-    <!--</scroll-view>-->
-  <!--</view>-->
   <view class="goods-container">
     <view class="goods-header">餐具产品</view>
-    <view class="goods-box" wx:for-items="{{goods}}" wx:key="{{index}}" bindtap="toDetailsTap" data-id="{{item.id}}">
+    <view class="goods-box" wx:for-items="{{goods}}" wx:key="{{index}}" bindtap="toDetailsTap" data-id="{{item.goodsId}}">
       <view class="goods-item">
         <view class="img-box">
-          <image src="{{item.pic}}_m" class="image" mode="aspectFill"/>
+          <image src="{{item.fileUrl}}" class="image" mode="aspectFill"/>
         </view>
         <view class="goods-detail">
-          <view class="goods-title">{{item.name}}</view>
+          <view class="goods-title">{{item.goodsName}}</view>
           <view class="goods-wrap">
             <view class="goods-price">
               <view class="price-label">¥  </view>
-              <view class="price-value">{{item.minPrice}}</view>
+              <view class="price-value">{{item.price}}</view>
               <view class="price-unit"> /套</view>
-                <!--todo 不同单位，可能出现  /件  18套/件-->
             </view>
             <view class="goods-select">选规格</view>
           </view>
@@ -80,10 +26,9 @@
   <view class="partner-container">
     <view class="partner-header">合作伙伴</view>
     <view class="partner-item" wx:for-items="{{partners}}" wx:key="{{index}}">
-      <image src="{{item.picUrl}}_m" class="image" mode="aspectFill"/>
+      <image src="{{item.fileUrl}}" class="image" mode="aspectFill"/>
       <view class="partner-modal"></view>
-      <view class="partner-name">- {{item.title}} -</view>
+      <view class="partner-name">- {{item.partnersName}} -</view>
     </view>
   </view>
-  <view class="no-more-goods">没有更多啦</view>
 </view>
