组件化商品列表，完成首页和餐具页，完成联系我们页数据完善

--- a/pages/banner-detail/index.wxml
+++ b/pages/banner-detail/index.wxml
@@ -1,24 +1,5 @@
 <!--index.wxml-->
 <!--1px = 750/320 = 2.34rpx;-->
 <view class="container">
-  <view class="goods-container">
-    <view class="goods-box" wx:for-items="{{goods}}" wx:key="{{index}}" bindtap="toDetailsTap" data-id="{{item.id}}">
-      <view class="goods-item">
-        <view class="img-box">
-          <image src="{{item.pic}}_m" class="image" mode="aspectFill"/>
-        </view>
-        <view class="goods-detail">
-          <view class="goods-title">{{item.name}}</view>
-          <view class="goods-wrap">
-            <view class="goods-price">
-                <view class="price-label">¥  </view>
-                <view class="price-value">{{item.minPrice}}</view>
-                <view class="price-unit"> /套</view>
-            </view>
-            <view class="goods-select">选规格</view>
-          </view>
-        </view>
-      </view>
-    </view>
-  </view>
+  <image src="/images/banner/banner-detail.png" style="width: 100%;height: 4583rpx"></image>
 </view>
