--- a/components/goods-list/index.wxss
+++ b/components/goods-list/index.wxss
@@ -62,43 +62,56 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  justify-content: space-between;
   height: 164rpx;
-}
-.goods-box .goods-title, .goods-box .goods-price{
-  overflow: hidden;
-  font-size: 30rpx;
-  margin-left: 30rpx;
+  padding:20rpx 0 20rpx 30rpx;
+  box-sizing:border-box;
 }
 .goods-wrap{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-bottom: 20rpx;
+  margin-top: 38rpx;
 }
 .goods-box .goods-title{
+  font-size: 26rpx;
   font-family: PingFang SC Medium, sans-serif;
+  font-weight:500;
   text-overflow: ellipsis;
   white-space: nowrap;
-  padding-top: 20rpx;
   color:#000;
+  line-height: 1;
+}
+.goods-rule{
+  font-family: PingFang SC Medium, sans-serif;
+  font-weight:500;
+  color: #888;
+  height: 28rpx;
+  font-size: 22rpx;
+  margin-top: 10rpx;
 }
 .goods-box .goods-price{
+  height:28rpx;
+  line-height: 30rpx;
   font-family: DINAlternate Bold, sans-serif;
+  font-weight: 500;
   display: flex;
   align-items: center;
   color:#ff001c;
 }
 .price-label{
   font-size: 30rpx;
-  padding-right: 10rpx;
+  padding-right: 5rpx;
 }
 .price-value{
   font-size: 34rpx;
 }
-.price-unit{
+.price-xiegang{
   font-size: 26rpx;
-  padding-left: 10rpx;
+  padding-left: 5rpx;
+}
+.price-unit{
+  font-family: PingFang SC Medium, sans-serif;
+  font-size: 26rpx;
 }
 .goods-select{
   font-family: PingFang SC Medium, sans-serif;
